apps/pk8s/plex/plex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: plex
  name: plex
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: plex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: plex
      annotations:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - env:
            - name: PGID
              value: '1000'
            - name: PLEX_CLAIM
              valueFrom:
                secretKeyRef:
                  name: flexget
                  key: PLEX_CLAIM
            - name: PUID
              value: '1000'
            - name: VERSION
              value: docker
          image: lscr.io/linuxserver/plex:1.41.7 # {"$imagepolicy": "plex:plex"}
          name: plex
          ports:
            - containerPort: 32400
              name: pms
              protocol: TCP
            - containerPort: 1900
              name: dnla-udp
              protocol: UDP
            - containerPort: 32469
              name: dnla-tcp
              protocol: TCP
            - containerPort: 3005
              name: home-theatre
              protocol: TCP
            - containerPort: 5353
              name: discovery
              protocol: TCP
            - containerPort: 32410
              protocol: UDP
            - containerPort: 32412
              protocol: UDP
            - containerPort: 32413
              protocol: UDP
            - containerPort: 32414
              protocol: UDP
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: plex-config
            - mountPath: /tv
              name: plex-media
              subPath: series
            - mountPath: /movies
              name: plex-media
              subPath: films
            - mountPath: /music
              name: plex-media
              subPath: music
      restartPolicy: Always
      volumes:
        - name: plex-config
          persistentVolumeClaim:
            claimName: plex-config
        - name: plex-media
          persistentVolumeClaim:
            claimName: plex-media
