apps/pk8s/plex/transmission-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: transmission
  name: transmission
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: transmission
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: transmission
    spec:
      containers:
        - env:
            - name: PASS
              valueFrom:
                secretKeyRef:
                  name: flexget
                  key: TRANSMISSION_PASS
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TRANSMISSION_WEB_HOME
              value: /combustion-release/
            - name: TZ
              value: Europe/Madrid
            - name: USER
              value: transmission
          image: lscr.io/linuxserver/transmission:4.1.3 # {"$imagepolicy": "plex:transmission"}
          name: transmission
          ports:
            - containerPort: 9091
            - containerPort: 51413
            - containerPort: 51413
              protocol: UDP
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: transmission-config
            - mountPath: /downloads
              name: transmission-downloads
              subPath: transmission
            - mountPath: /watch
              name: transmission-watch
      restartPolicy: Always
      volumes:
        - name: transmission-config
          persistentVolumeClaim:
            claimName: transmission-config
        - name: transmission-downloads
          persistentVolumeClaim:
            claimName: plex-media
        - name: transmission-watch
          persistentVolumeClaim:
            claimName: transmission-watch
