apps/pk8s/plex/flexget-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: flexget
  name: flexget
  namespace: plex
spec:
  ports:
    - name: http
      port: 5050
      targetPort: 5050
  type: ClusterIP
  selector:
    io.kompose.service: flexget
