apps/pk8s/plex/jackett.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: jackett
  name: jackett
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jackett
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: jackett
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Europe/Madrid
          image: lscr.io/linuxserver/jackett:latest
          name: jackett
          ports:
            - containerPort: 9117
          resources: {}
          volumeMounts:
            - mountPath: /custom-cont-init.d
              name: jackett-custom
              readOnly: true
            - mountPath: /config
              name: jackett-config
      restartPolicy: Always
      volumes:
        - name: jackett-custom
          configMap:
            name: jackett-custom
        - name: jackett-config
          persistentVolumeClaim:
            claimName: jackett-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: jackett
  name: jackett
  namespace: plex
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9117
  type: ClusterIP
  selector:
    io.kompose.service: jackett
