apps/pk8s/plex/lidarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: lidarr
  name: lidarr
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: lidarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: lidarr
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Europe/Madrid
          image: lscr.io/linuxserver/lidarr:2.7.1 # {"$imagepolicy": "plex:lidarr"}
          name: lidarr
          ports:
            - containerPort: 8686
          resources: {}
          volumeMounts:
            - mountPath: /custom-cont-init.d
              name: lidarr-custom
              readOnly: true
            - mountPath: /config/MediaCover
              name: plex-media
              subPath: music_cover
            - mountPath: /config
              name: lidarr-config
            - mountPath: /music
              name: plex-media
              subPath: music
            - mountPath: /downloads
              name: plex-media
              subPath: transmission
      restartPolicy: Always
      volumes:
        - name: lidarr-custom
          configMap:
            name: lidarr-custom
        - name: plex-media
          persistentVolumeClaim:
            claimName: plex-media
        - name: lidarr-config
          persistentVolumeClaim:
            claimName: lidarr-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: lidarr
  name: lidarr
  namespace: plex
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8686
  type: ClusterIP
  selector:
    io.kompose.service: lidarr
