apps/pk8s/plex/mylar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mylar
  name: mylar
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mylar
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: mylar
    spec:
      containers:
        - env:
            - name: PGID
              value: '1000'
            - name: PUID
              value: '1000'
            - name: TZ
              value: Europe/Madrid
          image: lscr.io/linuxserver/mylar3:0.7.8 # {"$imagepolicy": "plex:mylar3"}
          name: mylar
          ports:
            - containerPort: 8090
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: mylar-config
            - mountPath: /comics
              name: plex-media
              subPath: comics
            - mountPath: /downloads
              name: plex-media
              subPath: transmission
      restartPolicy: Always
      volumes:
        - name: plex-media
          persistentVolumeClaim:
            claimName: plex-media
        - name: mylar-config
          persistentVolumeClaim:
            claimName: mylar-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mylar
  name: mylar
  namespace: plex
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8090
  type: ClusterIP
  selector:
    io.kompose.service: mylar
