apps/pk8s/plex/plex-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: internal-pool
    metallb.universe.tf/loadBalancerIPs: 192.168.4.241
  labels:
    io.kompose.service: plex
  name: plex
  namespace: plex
spec:
  ports:
    - name: data
      port: 32400
      targetPort: 32400
  type: LoadBalancer
  selector:
    io.kompose.service: plex
