apps/pk8s/plex/seerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: seerr
  name: seerr
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: seerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: seerr
    spec:
      containers:
        - env:
            - name: PGID
              value: '1000'
            - name: PUID
              value: '1000'
            - name: TZ
              value: Europe/Madrid
          image: ghcr.io/seerr-team/seerr:v3.5.0 # {"$imagepolicy": "plex:seerr"}
          name: seerr
          ports:
            - containerPort: 5055
          resources: {}
          volumeMounts:
            - mountPath: /app/config
              name: seerr-config
      restartPolicy: Always
      volumes:
        - name: seerr-config
          persistentVolumeClaim:
            claimName: seerr-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: seerr
  name: seerr
  namespace: plex
spec:
  ports:
    - name: http
      port: 80
      targetPort: 5055
  type: ClusterIP
  selector:
    io.kompose.service: seerr
