apps/pk8s/plex/transmission-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/loadBalancerIPs: 192.168.4.241
  labels:
    io.kompose.service: transmission
  name: transmission
  namespace: plex
spec:
  ports:
    - name: http
      port: 9091
      targetPort: 9091
    - name: data
      port: 51413
      targetPort: 51413
    - name: data-udp
      port: 51413
      protocol: UDP
      targetPort: 51413
  type: LoadBalancer
  selector:
    io.kompose.service: transmission
