apps/pk8s/plex/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: panel
  namespace: plex
  annotations:
    traefik.ingress.kubernetes.io/router.tls: 'true'
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirectscheme@kubernetescrd,traefik-internal-ipallowlist@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - panel.torreviejawireless.org
      secretName: tw-tls
  rules:
    - host: panel.torreviejawireless.org
      http:
        paths:
          - path: /bazarr
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  name: http
          - path: /prowlarr
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  name: http
          - path: /sonarr
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  name: http
          - path: /radarr
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  name: http
          - path: /lidarr
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  name: http
          - path: /mylarr
            pathType: Prefix
            backend:
              service:
                name: mylar3
                port:
                  name: http
          - path: /cleanuparr
            pathType: Prefix
            backend:
              service:
                name: cleanuparr
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  namespace: plex
  annotations:
    traefik.ingress.kubernetes.io/router.tls: 'true'
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirectscheme@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - overseerr.torreviejawireless.org
      secretName: tw-tls
  rules:
    - host: overseerr.torreviejawireless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profilarr
  namespace: plex
  annotations:
    traefik.ingress.kubernetes.io/router.tls: 'true'
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirectscheme@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - profilarr.torreviejawireless.org
      secretName: tw-tls
  rules:
    - host: profilarr.torreviejawireless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: profilarr
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: plex
  annotations:
    traefik.ingress.kubernetes.io/router.tls: 'true'
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirectscheme@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jelly.torreviejawireless.org
      secretName: tw-tls
  rules:
    - host: jelly.torreviejawireless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  name: http
